# TRANSFORMERSPDF

./: README.md  app2.py  gitignore  install_and_run.bat  packages.txt  pyproject.toml  requirements.txt
