[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htmlpdf-converter"
version = "0.1.0"
description = "Streamlit app para converter HTML/XLS(X)/DOCX/Imagens em PDF"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit",
  "pandas",
  "pillow",
  "mammoth",
  "xhtml2pdf",
  "pypdf",
  "openpyxl",
  "xlrd==2.0.1",
  "weasyprint",
]

[tool.streamlit]
server.port = 8501
